Attempt to handle PermGen errors for JDK7 on Appveyor